package Ejercicio1entrega3;

public class CustomerService {
    public void takeReservation() {
        System.out.println("Customer service is taking a new reservation.");
    }

    public void cancelReservation() {
        System.out.println("Customer service has canceled a reservation.");
    }
}
