package Ejercicio1entrega3;

public class DeliveryService {
    public void handleDelivery() {
        System.out.println("Delivery service is handling the delivery of the order.");
    }
}
