package Ejercicio1entrega3;

public class Kitchen {
    public void prepareOrder() {
        System.out.println("Kitchen is preparing the order.");
    }
}
