package Ejercicio1entrega3;

public class Restaurant {
    public void bookTable() {
        System.out.println("Table booked in Restaurant.");
    }

    public void orderFood() {
        System.out.println("Food ordered in Restaurant.");
    }

    public void cancelReservation() {
        System.out.println("Reservation canceled in Restaurant.");
    }
}
